<resources>
    <string name="app_name">Count This</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="context_menu_List_move">Move</string>
    <string name="context_menu_List_add_time">Add Time</string>
    <string name="context_menu_List_edit">Edit</string>
    <string name="context_menu_List_reset">Reset</string>
    <string name="context_menu_List_delete">Delete</string>

    <string-array name="context_menu_list_options">
        <item>Move</item>
        <item>Add Time</item>
        <item>Edit</item>
        <item>Reset</item>
        <item>Delete</item>
    </string-array>

    <string name="dialog_title_delete_counter">Delete Counter</string>
    <string name="dialog_message_delete_counter">Are you sure that you want to delete %1$s?</string>
    <string name="dialog_title_confirm_delete_counter">Delete</string>

    <string name="dialog_title_reset_counter">Reset Counter</string>
    <string name="dialog_message_reset_counter">Are you sure that you want to reset %1$s?</string>
    <string name="dialog_title_confirm_reset_counter">Reset</string>


    <string name="dialog_add_time_title">Add Time</string>
    <string name="dialog_add_time_dismiss_button_text">Cancel</string>
    <string name="dialog_add_time_confirm_button_text">Add</string>
    <string name="dialog_add_time_add_location_button_text">Location</string>

    <string name="dialog_add_location_confirm_button_text">Confirm</string>
    <string name="dialog_dismiss">Dismiss</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Composer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="conversations">Conversations</string>
    <string name="profile">Profile</string>
    <string name="jumpBottom">Jump to bottom</string>
    <string name="send">Send</string>
    <string name="author_me">me</string>
    <string name="now">8:30 PM</string>
    <string name="members">%d members</string>
<!--    <string name="textfield_hint">Message #composers</string>-->
    <string name="emojis_label">Emojis</string>
    <string name="stickers_label">Stickers</string>

    <string name="message">Message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_error">There was an error loading the profile</string>
    <string name="bio">Bio</string>
    <string name="timezone">Timezone</string>
    <string name="twitter">Twitter</string>
    <string name="common_channels">Channels in common</string>
    <string name="lorem">Lorem or Ipsum</string>
    <string name="status">Status</string>


    <string name="stats_display_name">Display name:</string>
    <string name="stats_date_created">Date Created:</string>
    <string name="stats_most_recent">Most Recent:</string>
    <string name="stats_last_location">Last Location:</string>
    <string name="stats_current_count">Current Count:</string>



    <string name="counter_list_title">Counters</string>
    <string name="list_empty">You have no counters. \n Go on, add a counter</string>
    <string name="list_error">No Counters Found or Error Loading Counters</string>
    <string name="add">Add</string>
    <string name="textfield_hint">Counter Name</string>
    <string name="counter_error">There was an error loading the counter</string>
    <string name="edit_counter">Edit Counter</string>
    <!-- Accessibility descriptions -->

    <string name="emoji_selector_desc">Emoji selector</string>
    <string name="emoji_selector_bt_desc">Show Emoji selector</string>
    <string name="dm_desc">Direct Message</string>
    <string name="attach_photo_desc">Attach Photo</string>
    <string name="map_selector_desc">Location selector</string>
    <string name="videochat_desc">Start videochat</string>
    <string name="textfield_desc">Text input</string>
    <string name="not_available">Functionality currently not available</string>
    <string name="not_available_subtitle">Grab a beverage and check back later!</string>
    <string name="attached_image">Attached image</string>
    <string name="search">Search</string>
    <string name="info">Information</string>
    <string name="more_options">More options</string>
    <string name="cd_navigate_up">Navigate up</string>




    <string name="settings_title">Settings</string>
    <string name="settings_ui_category_title">User Interface</string>
    <string name="settings_theme_title">Theme</string>

    <string name="settings_dynamic_color_title">Dynamic colors</string>
    <string name="settings_dynamic_color_summary">Use colors derived from your wallpaper</string>

    <string name="settings_button_increment_title">Button Increment</string>
    <string name="settings_button_increment_summary_on">Use buttons to increment counters</string>


    <string name="settings_about_category_title">About Count This</string>

    <string name="view_privacy_policy">View Privacy Policy</string>
    <string name="privacy_policy_url" translatable="false">https://github.com/ydarBing/CountThis/privacypolicy</string>
    <string name="settings_app_version">Version</string>
    <string name="settings_app_version_summary">v%1$s (%2$d)</string>

    <string name="settings_open_source">Open source licenses</string>
    <string name="settings_open_source_summary">Count This</string>


    <string name="create_counter_name">Name</string>
    <string name="create_counter_goal">Goal</string>
    <string name="create_counter_start_count">Start Count</string>
    <string name="create_counter_increment">Increment</string>
    <string name="create_counter_track_location">Track Location</string>
    <string name="create_counter_confirm_create">Done</string>


    <string name="location_permission_denied_message">Location permission needed to use this feature. If it does not work, then you will have to do it manually from the settings.</string>
    <string name="location_permission_rationale_message">To Track location of counter, you need to allow location permission.</string>

    <string name="cd_close">Close</string>

    <string name="launch_activity">Launch activity</string>
    <string name="permission_rationale">Location permission needed for tracking location</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>

    <string name="preference_file_key">com.gurpgork.countthis.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">Location Unknown</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

</resources>