<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="pref_category_ui"
        android:title="@string/settings_ui_category_title">

        <ListPreference
            app:useSimpleSummaryProvider="true"
            android:key="pref_theme"
            android:title="@string/settings_theme_title"
            android:defaultValue="@string/pref_theme_default_value"
            android:entries="@array/prefs_theme_titles"
            android:entryValues="@array/prefs_theme_values"/>

        <SwitchPreference
            android:key="pref_dynamic_colors"
            android:defaultValue="true"
            android:summaryOff="@string/settings_dynamic_color_summary"
            android:title="@string/settings_dynamic_color_title" />

        <SwitchPreference
            android:key="pref_button_increment"
            android:defaultValue="false"
            android:title="@string/settings_button_increment_title"
            android:summaryOff="@string/settings_button_increment_summary_on" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="about_category"
        android:title="@string/settings_about_category_title">

        <Preference
            android:key="privacy_policy"
            android:title="@string/view_privacy_policy" />

        <Preference
            android:key="version"
            android:title="@string/settings_app_version" />

    </PreferenceCategory>

</PreferenceScreen>